2007-09-22 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/preferences_dialog.glade: UI tweaks regarding the
    proxy tab.

2007-09-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: Some UI tweaks.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2007-09-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * AUTHORS: Changed my email address.
    * ChangeLog: Likewise.
    * HACKING: Likewise.
    * lib/fantasdic.rb: Likewise.
    * data/omf/fantasdic/fantasdic-fr.omf: Likewise.
    * data/omf/fantasdic/fantasdic-C.omf: Likewise.
    * data/gnome/help/fantasdic/C/fantasdic.xml: Likewise.
    * data/gnome/help/fantasdic/AUTHORS: Likewise.
    * data/gnome/help/fantasdic/fr/fr.po: Likewise.
    * data/gnome/help/fantasdic/ChangeLog: Likewise.
    * MAINTAINERS: Likewise.
    * po/fr.po: Likewise.
    * po/AUTHORS: Likewise.
    * po/ChangeLog: Likewise.

2007-09-21 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/utils.rb:
    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    * lib/fantasdic/ui/print.rb:
    * data/fantasdic/glade/add_dictionary_dialog.glade:
    * data/fantasdic/glade/preferences_dialog.glade:
    Per dictionary font preferences.

2007-09-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb:
    * data/fantasdic/glade/add_dictionary_dialog.glade:
    * data/fantasdic/glade/preferences_dialog.glade:
    Connects signals from the Ruby files instead of defining functions callbacks
    in the Glade files.

2007-09-20 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui.rb: SUPPORTS_STATUS_ICON and SUPPORTS_PRINT renamed to
    HAVE_STATUS_ICON and HAVE_PRINT.
    * lib/fantasdic/ui/preferences_dialog.rb: Likewise.